k8s/asgard/apps/startpage/namespace.yaml
# k8s/asgard/apps/startpage/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: startpage
